# speech-synthesis

./: .gitignore  CMakeLists.txt  README.md  test_source.h
headers/: test_source.h
sources/: mainwindow.cpp  mainwindow.h  test_source.cpp
sources/espeak-interface/: espeak-interface.cpp  espeak-interface.h  test_source.cpp  test_source.h
sources/espeak-interface/types/: espeak-options.type.h
views/: mainwindow.ui
